# robot

./: backup.txt  command.txt  dev_ban.txt  existing_channels.json  keep_alive.py  left_servers.txt  main.py  pyproject.toml  user_data.json  warns.txt  whitelist.txt
