[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
timedelta = "^2020.12.3"
colorama = "^0.4.6"
discord = "^2.1.0"
moment = "^0.12.1"
discord-android = "^1.1.0"
parse = "^1.19.0"
parsems = "^1.0.4"
emojis = "^0.7.0"
humanize = "^4.6.0"
youtube_dl = "^2021.12.17"
jishaku = "^2.5.1"
lyricsgenius = "^3.0.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"